--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   dio: ^4.0.6
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_test:
